SERVER-40038 Handle renames across databases in lock failpoint.